force-app/main/default/objects/Course_Expense__c/Course_Expense__c.object-meta.xml
<CustomObject>
    <description>Tracks Course and Training Expenses related to Courses and Sessions</description>
    <label>Course Expense</label>
    <nameField>
        <displayFormat>COE-{000000}</displayFormat>
        <label>Course Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>