force-app/main/default/objects/Course_Expense__c/fields/Course_Session__c.field-meta.xml
<CustomField>
    <fullName>Course_Session__c</fullName>
    <description>Ties the cost and expense to the related course/session</description>
    <label>Course/Session</label>
    <referenceTo>Course_Session__c</referenceTo>
    <relationshipLabel>Training Expenses</relationshipLabel>
    <relationshipName>Course_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>