force-app/main/default/objects/Course_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>Identifies the type of expense</description>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Car Rental/Taxi</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>