force-app/main/default/objects/Course_Expense__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Text field to provide notes related to the expense</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>